--- a/doc/example_architecture/parameters_context_view.science_assembly.view.yaml
+++ b/doc/example_architecture/parameters_context_view.science_assembly.view.yaml
@@ -5,4 +5,4 @@ filters:
   - name: include_component_types
     type: component_name_context
     include:
-      - parameters_Instance
+      - Parameters_Instance
