--- a/doc/example_architecture/style_demo/component_model_to_lint.component.yaml
+++ b/doc/example_architecture/style_demo/component_model_to_lint.component.yaml
@@ -3,7 +3,7 @@ execution: active
 init:
   description: An initialization function for this component.
   parameters:
-    - name: is_Enabled
+    - name: Is_Enabled
       type: Boolean
       default: "True"
 connectors:
