--- a/src/components/parameters/test_grouped/test_grouped_assembly/test_grouped_params.test_grouped_assembly.parameter_table.yaml
+++ b/src/components/parameters/test_grouped/test_grouped_assembly/test_grouped_params.test_grouped_assembly.parameter_table.yaml
@@ -3,6 +3,6 @@ description: Test parameter table with grouped parameters.
 parameters_instance_name: Parameters_Instance
 parameters:
   # Grouped parameters - same entry in table for both Component_A and Component_B
-  - [component_A.Parameter_I32, component_B.Parameter_I32]
-  - [component_A.Parameter_U16, component_B.Parameter_U16]
-  - component_C.The_Tick
+  - [Component_A.Parameter_I32, Component_B.Parameter_I32]
+  - [Component_A.Parameter_U16, Component_B.Parameter_U16]
+  - Component_C.The_Tick
