--- a/src/components/ccsds_router/doc/assembly/mixed.context.view.yaml
+++ b/src/components/ccsds_router/doc/assembly/mixed.context.view.yaml
@@ -5,5 +5,5 @@ filters:
   - name: rm_component
     type: component_name
     exclude:
-      - ccsds_Sync_Sender
-      - passive_Ccsds_Router
+      - Ccsds_Sync_Sender
+      - Passive_Ccsds_Router
