--- a/src/components/ccsds_subpacket_extractor/doc/assembly/passive.context.view.yaml
+++ b/src/components/ccsds_subpacket_extractor/doc/assembly/passive.context.view.yaml
@@ -5,6 +5,6 @@ filters:
   - name: rm_component
     type: component_name
     exclude:
-      - ccsds_High_Priority_Sender
-      - ccsds_Async_Sender
-      - active_Ccsds_Subpacket_Extractor
+      - Ccsds_High_Priority_Sender
+      - Ccsds_Async_Sender
+      - Active_Ccsds_Subpacket_Extractor
