--- a/src/components/interrupt_listener/doc/assembly/context.assembly.yaml
+++ b/src/components/interrupt_listener/doc/assembly/context.assembly.yaml
@@ -9,9 +9,9 @@ components:
     generic_types:
       - "Interrupt_Data_Type => Interrupt_Count.T"
     discriminant:
-      - "interrupt_Priority => System.Interrupt_Priority'Last"
-      - "interrupt_Id => Ada.Interrupts.Names.SIGUSR1"
-      - "custom_Interrupt_Procedure => Tick_Interrupt_Handler.Handler'Access"
+      - "Interrupt_Priority => System.Interrupt_Priority'Last"
+      - "Interrupt_Id => Ada.Interrupts.Names.SIGUSR1"
+      - "Custom_Interrupt_Procedure => Tick_Interrupt_Handler.Handler'Access"
 connections:
   - from_component: Main_Loop_Instance
     from_connector: Interrupt_Count_T_Get
