--- a/src/components/interrupt_pender/doc/assembly/context.assembly.yaml
+++ b/src/components/interrupt_pender/doc/assembly/context.assembly.yaml
@@ -10,9 +10,9 @@ components:
       - "Interrupt_Data_Type => Tick.T"
       - "Set_Interrupt_Data_Time => Tick_Interrupt_Handler.Set_Tick_Time"
     discriminant:
-      - "interrupt_Priority => System.Interrupt_Priority'Last"
-      - "interrupt_Id => Ada.Interrupts.Names.SIGUSR1"
-      - "custom_Interrupt_Procedure => Tick_Interrupt_Handler.Handler'Access"
+      - "Interrupt_Priority => System.Interrupt_Priority'Last"
+      - "Interrupt_Id => Ada.Interrupts.Names.SIGUSR1"
+      - "Custom_Interrupt_Procedure => Tick_Interrupt_Handler.Handler'Access"
 connections:
   - from_component: Periodic_Component_Instance
     from_connector: Tick_T_Get
