--- a/src/components/memory_copier/memory_copier.component.yaml
+++ b/src/components/memory_copier/memory_copier.component.yaml
@@ -4,11 +4,11 @@ execution: active
 init:
   description: Initialization parameters for the Memory Copier.
   parameters:
-    - name: ticks_Until_Timeout
+    - name: Ticks_Until_Timeout
       type: Natural
       description: The component will wait until it has received at least this many ticks before reporting a timeout error while waiting for a memory copy to complete. For example, if the component is attached to a 10Hz rate group and this value is set to 7, then the component will wait between 700 and 800 ms before declaring a timeout error from an unresponsive downstream component.
 connectors:
-  - description: The component should be attached to a periodic tick that is used to timeout waiting for a memory region copy response. See the ticks_Until_Timeout initialization parameter.
+  - description: The component should be attached to a periodic tick that is used to timeout waiting for a memory region copy response. See the Ticks_Until_Timeout initialization parameter.
     name: Timeout_Tick_Recv_Sync
     type: Tick.T
     kind: recv_sync
