--- a/src/components/memory_stuffer/memory_stuffer.component.yaml
+++ b/src/components/memory_stuffer/memory_stuffer.component.yaml
@@ -5,11 +5,11 @@ execution: active
 init:
   description: This component requires a list of memory regions which it can write to. These regions can either be protected (requiring an arm command prior to execution) or unprotected, as specified by the second parameter.
   parameters:
-    - name: memory_Regions
+    - name: Memory_Regions
       type: Memory_Manager_Types.Memory_Region_Array_Access
       not_null: true
       description: An access to a list of memory regions.
-    - name: memory_Region_Protection_List
+    - name: Memory_Region_Protection_List
       type: Memory_Manager_Types.Memory_Protection_Array_Access
       default: "null"
       description: An access to a list of the protected/unprotected state of each memory region. The index in this array corresponds to the index of the memory region affected in the previous parameter. If the array is null, then it is assumed that all memory regions are unprotected.
