--- a/src/components/product_database/product_database.component.yaml
+++ b/src/components/product_database/product_database.component.yaml
@@ -7,13 +7,13 @@ execution: passive
 init:
   description: This component requires the minimum and maximum acceptable data product IDs in order to size its internal database. Memory will be allocated to store a maximum sized data product for every ID in the range provided.
   parameters:
-    - name: minimum_Data_Product_Id
+    - name: Minimum_Data_Product_Id
       type: Data_Product_Types.Data_Product_Id
       description: The minimum data product identifier that the database will accept.
-    - name: maximum_Data_Product_Id
+    - name: Maximum_Data_Product_Id
       type: Data_Product_Types.Data_Product_Id
-      description: The maximum data product identifier that the database will accept. This value combined with the minimum_Data_Product_Id are used to allocate a table on the heap. Ids stored in this database should come from a compact Id space for most efficient memory usage.
-    - name: send_Event_On_Missing
+      description: The maximum data product identifier that the database will accept. This value combined with the Minimum_Data_Product_Id are used to allocate a table on the heap. Ids stored in this database should come from a compact Id space for most efficient memory usage.
+    - name: Send_Event_On_Missing
       type: Boolean
       default: "True"
       description: By default the product database will send an event every time a data product is fetched that is missing. Sometimes this is expected behavior and the message is annoying. This flag allows that event to be disabled permanently on startup if needed.
