--- a/src/components/ccsds_command_depacketizer/ccsds_command_depacketizer.requirements.yaml
+++ b/src/components/ccsds_command_depacketizer/ccsds_command_depacketizer.requirements.yaml
@@ -6,4 +6,4 @@ requirements:
   - text: The component shall reject CCSDS packets that do not contain a secondary header.
   - text: The component shall reject CCSDS packets that are not marked as telecommand packets in the secondary header.
   - text: The component shall reject CCSDS packets that contain an invalid 8-bit command checksum in the secondary header.
-  - text: The component shall calculate the actual command packet length by subtracting the number stored in the secondary header function code from the CCSDS header length.
+  - text: The component shall calculate the actual command packet length by subtracting the function code value (pad byte count) from the CCSDS packet data field length.
