Fix Medium review item: No Test for Counter Overflow
Addresses §4.1 finding in REVIEW.md.
Added Test_Counter_Saturation test that drives Num_Passed_Packets and
Num_Filtered_Packets to Unsigned_16'Last and verifies saturation behavior
instead of wraparound.

--- a/src/components/ccsds_downsampler/apid_tree/test/apid_tree.tests.yaml
+++ b/src/components/ccsds_downsampler/apid_tree/test/apid_tree.tests.yaml
@@ -7,3 +7,5 @@ tests:
     description: This unit test tests changing the value of the filter factor for a given apid.
   - name: Test_Get_Counters
     description: This unit test makes sure the counters for the number of packets that should be passed or filtered are correct.
+  - name: Test_Counter_Saturation
+    description: This test verifies that Num_Passed_Packets and Num_Filtered_Packets saturate at Unsigned_16'Last instead of wrapping around to 0, and that Filter_Count uses modular arithmetic correctly.
