Fix Low review item: Incorrect Filter List Description
Addresses §1.3 finding in REVIEW.md.
Changed copy-pasted 'Data products' description to correctly describe the
downsampler filter list for the unit test.

--- a/src/components/ccsds_downsampler/test/test_assembly/test_downsample_list.ccsds_downsampler_filters.yaml
+++ b/src/components/ccsds_downsampler/test/test_assembly/test_downsample_list.ccsds_downsampler_filters.yaml
@@ -1,5 +1,5 @@
 ---
-description: Data products for the ccsds downsampler component.
+description: Downsampled packet filter list for the CCSDS downsampler unit test.
 downsampled_packets:
   - apid: 100
     filter_factor: 0
