--- a/src/components/ccsds_downsampler/apid_tree/test/apid_tree.tests.yaml
+++ b/src/components/ccsds_downsampler/apid_tree/test/apid_tree.tests.yaml
@@ -7,3 +7,11 @@ tests:
     description: This unit test tests changing the value of the filter factor for a given apid.
   - name: Test_Get_Counters
     description: This unit test makes sure the counters for the number of packets that should be passed or filtered are correct.
+  - name: Test_Filter_Count_Overflow
+    description: This test exercises Filter_Count behavior across the former Unsigned_16 wrap-around boundary to verify correct pass/filter patterns over 65536+ calls.
+  - name: Test_Counter_Overflow
+    description: This test exercises global Num_Passed_Packets and Num_Filtered_Packets counter behavior near Unsigned_16 overflow.
+  - name: Test_Empty_Init_List
+    description: This test initializes the tree with an empty list and verifies all APIDs return Invalid_Id.
+  - name: Test_Single_Element_Init_List
+    description: This test initializes the tree with a single element list to test the boundary case for the binary tree.
