Fix High review item: Silent Drop of Packets on Full Queue
Addresses Section 3.1 finding in REVIEW.md.
Implements Packet_T_Send_Dropped to emit a Packet_Dropped event instead of silently discarding. Adds event connector to the component model and creates events YAML with Packet_Dropped and Packet_Truncated event definitions.

--- a/src/components/ccsds_echo/ccsds_echo.component.yaml
+++ b/src/components/ccsds_echo/ccsds_echo.component.yaml
@@ -8,6 +8,9 @@ connectors:
   - description: The packet send connector.
     type: Packet.T
     kind: send
+  - description: Events are sent out of this connector.
+    type: Event.T
+    kind: send
   - description: The system time is retrieved via this connector.
     return_type: Sys_Time.T
     kind: get
