--- a/src/components/ccsds_packetizer/test/ccsds_packetizer.tests.yaml
+++ b/src/components/ccsds_packetizer/test/ccsds_packetizer.tests.yaml
@@ -7,3 +7,5 @@ tests:
     description: This unit test exercises the packetization of a maximum sized Adamant packet into a CCSDS packet, which should succeed without issue.
   - name: Test_Min_Size_Packetization
     description: This unit test exercises the packetization of a minimum sized Adamant packet into a CCSDS packet, which should succeed without issue.
+  - name: Test_Invalid_Buffer_Length
+    description: This unit test verifies that an invalid (out-of-range) Buffer_Length value is caught by the runtime assertion and does not cause an uncontrolled Constraint_Error.
