Fix Medium review item: Add sequence count wraparound test
Addresses TEST-2 finding in REVIEW.md.
Adds Test_Sequence_Count_Wraparound to verify that the 14-bit sequence count
wrapping from 16383 to 0 is treated as the expected next value without warning.

--- a/src/components/ccsds_router/test/ccsds_router.tests.yaml
+++ b/src/components/ccsds_router/test/ccsds_router.tests.yaml
@@ -13,3 +13,5 @@ tests:
     description: This unit test tests that CCSDS packets of non-contiguous sequence counts produce a warning event.
   - name: Test_Duplicate_Packet_Drop
     description: This unit test tests that CCSDS packets of identical subsequent sequence counts get dropped.
+  - name: Test_Sequence_Count_Wraparound
+    description: This unit test verifies that sequence count wraparound from 16383 to 0 is treated as the expected next value and does not trigger a warning.
